[package]
name = "mdbook-tiny"
description = "Use mdbook to generate tiny and fast static sites"
authors = ["Cameron Dugan <mdbook-tiny@camerondugan.com>"]
repository = "https://github.com/camerondugan/mdbook-tiny"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
mdbook = "0.4.52"
pulldown-cmark = "0.13.0"
regex = "1.11.2"
serde = "1.0.219"
serde_derive = "1.0.219"
